--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-helmet": "^5.2.0",
+    "react-linkify": "^0.2.2",
     "styled-components": "^4.0.3"
   },
   "keywords": [
